--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
   release:
     name: Criação da Release
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [testes]
     steps:
       - uses: actions/checkout@v4
       - name: Login to Docker Hub
