--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -77,22 +77,22 @@ jobs:
             if: ${{ failure() }}
             run: echo "O status do Quality é ${{ steps.sonarqube-quality-gate-check.outputs.quality-gate-status }}"
 
-    # fs-trivy:
-    #     name: Scan Trivy
-    #     runs-on: ubuntu-latest
-    #     steps:
-    #         - uses: actions/checkout@v3
-    #         - name: Run Trivy vulnerability scanner
-    #           uses: aquasecurity/trivy-action@0.23.0
-    #           with:
-    #             scan-type: 'fs'
-    #             scan-ref: './src'
-    #             format: sarif
-    #             scanners: "vuln,secret,config"
-    #             output: 'trivy-dotnet-results.sarif'
-    #             severity: 'UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL'
-    #         - name: Upload Trivy scan results .NET
-    #           uses: github/codeql-action/upload-sarif@v3
-    #           with:
-    #             category: dotnet-result
-    #             sarif_file: 'trivy-dotnet-results.sarif'
+    fs-trivy:
+        name: Scan Trivy
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - name: Run Trivy vulnerability scanner
+              uses: aquasecurity/trivy-action@0.23.0
+              with:
+                scan-type: 'fs'
+                scan-ref: './src'
+                format: sarif
+                scanners: "vuln,secret,config"
+                output: 'trivy-dotnet-results.sarif'
+                severity: 'UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL'
+            - name: Upload Trivy scan results .NET
+              uses: github/codeql-action/upload-sarif@v3
+              with:
+                category: dotnet-result
+                sarif_file: 'trivy-dotnet-results.sarif'
