--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,11 @@ jobs:
     needs: [testes]
     steps:
       - uses: actions/checkout@v4
+      - name: Analise do Dockerfile
+        uses: hadolint/hadolint-action@v3.1.0
+        with:
+          dockerfile: ./src/Review-Filmes.Web/Dockerfile
+          
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
