--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,23 +23,22 @@ jobs:
   testes:
     needs: [build]
     permissions:
-        security-events: write
-        actions: read
-        contents: read
-    uses: veronez-dev/desafio-cicd-01/.github/workflows/testes.yml@main
+      security-events: write
+      actions: read
+      contents: read
+    uses: KubeDev/projeto-cicd-01-live/.github/workflows/testes.yml@main
     secrets: inherit
 
   release:
     name: Criação da Release
     runs-on: ubuntu-latest
     needs: [testes]
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
     steps:
       - uses: actions/checkout@v4
-      - name: Analise do Dockerfile
-        uses: hadolint/hadolint-action@v3.1.0
-        with:
-          dockerfile: ./src/Review-Filmes.Web/Dockerfile
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -54,19 +53,48 @@ jobs:
             fabricioveronez/rv-teste:latest
           context: ./src
           file: ./src/Review-Filmes.Web/Dockerfile
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.23.0
+        with:
+          scan-type: 'image'
+          image-ref: 'fabricioveronez/rv-teste:v${{ github.run_number }}'
+          format: sarif
+          output: 'trivy-docker-results.sarif'
+          severity: 'UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL'
+      - name: Upload Trivy scan results Docker
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          category: docker-result
+          sarif_file: 'trivy-docker-results.sarif'
 
-  deploy:
-    name: "Deploy"     
-    needs: [release]   
+  deploy-homolog:
+    needs: [release]
+    uses: KubeDev/projeto-cicd-01-live/.github/workflows/deploy.yml@main
+    secrets: inherit
+    with:
+      environment-name: homologacao
+      environment-url: http://homologacao.fabricioveronez.com
+    
+      
+  teste-e2e:
+    name: Teste End to End
     runs-on: ubuntu-latest
+    needs: [deploy-homolog]
+    environment: 
+      name: homologacao
+    container:
+      image: fabricioveronez/webdriver-dotnet:chrome
+      env:
+        BASE_URL: "http://${{ vars.BASE_URL }}"
     steps:
       - uses: actions/checkout@v4
-      - uses: azure/k8s-set-context@v4
-        with:
-          method: kubeconfig
-          kubeconfig: ${{ secrets.K8S_CONFIG }}
-      - uses: Azure/k8s-deploy@v5
-        with:
-            manifests: |
-              k8s/deployment.yaml
-            images: 'fabricioveronez/rv-teste:v${{ github.run_number }}'
+      - working-directory: ./src/
+        run: dotnet test ./Review-Filmes.Test.EndToEnd/Review-Filmes.Test.EndToEnd.csproj
+
+  deploy-producao:
+    needs: [teste-e2e]
+    uses: KubeDev/projeto-cicd-01-live/.github/workflows/deploy.yml@main
+    secrets: inherit
+    with:
+      environment-name: producao
+      environment-url: http://producao.fabricioveronez.com
